Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <title>Site Jean aprendendo Git e github</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso Gratis</h1>
             <article>
-                <h2>artigo 001</h2>
-                <p>artigo 001</p>
+                <h2>Curso de HTML5 com CSS3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut temporibus sit nihil praesentium neque repudiandae! Aut molestias quo deleniti ut molestiae recusandae quasi odit! Odit quidem laudantium officia iure maiores.</p>
                 <article>
-                    <h2>artigo 002</h2>
-                    <p>artigo 002</p>
+                    <h2>Curso de Javascript</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, quae molestiae quod quibusdam, autem optio magni error sit ipsum explicabo deserunt expedita nulla eos suscipit corrupti adipisci impedit sequi? Commodi?</p>
                 </article>
             </article>
         </header>
